--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -283,7 +283,7 @@ and moves the action from the top undo stack to the top of the redo history stac
 image::UndoRedoState3.png[]
 
 [NOTE]
-If the `commandHistory` stack is empty then there are no previous states to be restored. The `undo` command uses `Model#canUndoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the undo.
+If the undo stack is empty then there are no previous states to be restored. The `undo` command uses `Model#canUndoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the undo.
 
 The following sequence diagram shows how the undo operation works:
 
@@ -304,7 +304,7 @@ only reads and does not modify any data from the model.
 Such commands will not call `CommandHistory#addToCommandHistory()`,
 `CommandHistory#performUndo()`, `CommandHistory#performRedo()`.
 
-Thus, the `commandHistory` and `commandRedoHistory` stacks remain unchanged.
+Thus, the undo and redo stacks remain unchanged.
 
 image::UndoRedoState4.png[]
 
