--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -554,7 +554,7 @@ The tab will now show the full reimbursement list.
 //.Screenshot of a successful user input for Back Command in Reimbursement Tab
 image::Reimbursement/ReimbursementBackCommandSuccess.png[width="600"]
 
-==== Marking a Command as Done
+==== Marking a Reimbursement as Done
 This command helps you to mark a reimbursement as done and remove it from reimbursement list.
 
 [NOTE]
