--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -69,9 +69,10 @@ image:./icons/important.png[] Make sure that your screen resolution height is at
 . Copy the file to the folder you want to use as the home folder for your TimeBook.
 . Double-click the file to start the app.
 
++
 The GUI should appear in a few seconds.
-
-image::Ui.png[width="790"]
+image:Ui.png[width="790"]
++
 
 . Type the command in the command box and press kbd:[Enter] to execute it. +
 e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
@@ -591,7 +592,7 @@ Example:
 Suppose your group schedule looks like the one below.
 //Image1
 
-* Simply type `lookat n/Bobby n/Denise" if you are interested in inspecting both of their schedules!
+* Simply type `lookat n/Bobby n/Denise` if you are interested in inspecting both of their schedules!
 You should see that Bobby's and Denise's schedule become highlighted.
 //Image2
 
